bootstrap/apps/argocd/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: grpc.argocd.kubeshield.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: argocd-server
             port:
               name: https
  tls:
  - hosts:
    - grpc.argocd.kubeshield.com
    secretName: argocd-secret # do not change, this is provided by Argo CD
